clone Kickstarter-landing

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -13,14 +13,14 @@
 }
 
 @font-face {
-  font-family: Helvetica Neue;
+  font-family: "Helvetica Neue";
   src: url('../fonts/Helvetica/HelveticaNeueCyr-Black.otf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: Helvetica Neue;
+  font-family: "Helvetica Neue";
   src: url('../fonts/Helvetica/HelveticaNeueCyr-Light.otf');
   font-weight: normal;
   font-style: normal;
