--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,7 @@ $main-bg: #F7F7F7;
 $main-text-color: #333333;
 $second-text-color: #7C7C7C;
 $dark-bg: #4F4F4F;
-$lang-second-color: #828282; /*///*/
+$lang-second-color: #828282;
 $main-teal: #0DB2B3;
 $second-teal: #D6ECEC;
 $dark-teal: #0C797A;
@@ -66,12 +66,6 @@ $benefits-items: (
   title,
   text,
 );
-
-/*
-transition: all 1s;
-transition-delay: 0.1s;
-transition-timing-function: cubic-bezier(0.08,0.82,0.17,1);
-*/
 
 
 
