add task solution

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -27,6 +27,12 @@
     padding: 0;
     background: transparent;
     cursor: pointer;
+    transform: scale(1);
+    @include hoverEffect;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__pages {
