--- a/src/styles/blocks/buy-btn.scss
+++ b/src/styles/blocks/buy-btn.scss
@@ -14,7 +14,7 @@
 
   &::after {
     content: "";
-    background-image: url(../icons/icon-cart.png);
+    background-image: url(../icons/icon-cart.svg);
     background-repeat: no-repeat;
     position: absolute;
     width: 50%;
@@ -25,7 +25,7 @@
     visibility: hidden;
     transform: translateX(200%);
     pointer-events: none;
-    
+
     @include hoverEffect;
   }
 
